# streamlit-kanban-board

./: LICENSE  MANIFEST.in  README.md  build.py  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
streamlit_kanban_os/: .gitignore  __init__.py  example.py
streamlit_kanban_os/.streamlit/: config.toml
streamlit_kanban_os/src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
streamlit_kanban_os/src/frontend/src/: Board.tsx  Card.tsx  Column.tsx  SimpleTooltip.tsx  index.tsx  types.ts
