[project]
name = "streamlit-kanban-os"
version = "0.2.0-dev"
description = "An advanced Kanban board component for Streamlit with main column support"
authors = [
    {name = "Gabriel Quinche",email = "gabrielquinche@hotmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.9.7 || >3.9.7"
keywords = ["streamlit", "kanban", "board", "component", "drag-drop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Streamlit",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "streamlit (>=1.28.0,<2.0.0)"
]

[project.urls]
Homepage = "https://github.com/gabrielquinche/streamlit-kanban-os"
Repository = "https://github.com/gabrielquinche/streamlit-kanban-os"
Issues = "https://github.com/gabrielquinche/streamlit-kanban-os/issues"

[tool.poetry]
packages = [
    { include = "streamlit_kanban_os" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
